--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
   <button onclick="celebrateNo()">NO 🙈</button>
 
   <div id="celebrationText" class="hidden">
-    Yayyy thank you for choosing me 💖🎆
+    That's great. Now, plan a romantic dinner date 💖🎆
   </div>
 
   <div id="noText" class="hidden">
