--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Riya ❤️ Sunil</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
       margin: 0;
@@ -33,10 +34,10 @@
     }
 
     button {
-      padding: 15px 35px;
-      font-size: 1.2em;
+      padding: 18px 40px;
+      font-size: 1.3em;
       margin: 10px;
-      background: #e6005c;
+      background: linear-gradient(135deg, #e6005c, #ff3366);
       color: white;
       border: none;
       border-radius: 30px;
@@ -46,7 +47,7 @@
 
     button:hover {
       transform: scale(1.1);
-      background: #ff3366;
+      background: linear-gradient(135deg, #ff3366, #ff6699);
     }
 
     .hidden {
@@ -56,44 +57,32 @@
     /* Hearts */
     .heart {
       position: absolute;
-      font-size: 20px;
+      font-size: 25px;
       color: rgba(255, 255, 255, 0.8);
       animation: floatUp 6s linear infinite;
     }
 
     @keyframes floatUp {
-      from {
-        transform: translateY(100vh);
-        opacity: 1;
-      }
-      to {
-        transform: translateY(-10vh);
-        opacity: 0;
-      }
+      from { transform: translateY(100vh); opacity: 1; }
+      to { transform: translateY(-10vh); opacity: 0; }
     }
 
     /* Fireworks */
     .firework {
       position: absolute;
-      width: 6px;
-      height: 6px;
+      width: 8px;
+      height: 8px;
       border-radius: 50%;
       animation: explode 1s ease-out forwards;
     }
 
     @keyframes explode {
-      from {
-        transform: scale(1);
-        opacity: 1;
-      }
-      to {
-        transform: scale(20);
-        opacity: 0;
-      }
+      from { transform: scale(1); opacity: 1; }
+      to { transform: scale(20); opacity: 0; }
     }
 
     #celebrationText {
-      font-size: 2.2em;
+      font-size: 2.5em;
       margin-top: 20px;
       animation: pop 0.6s ease-in-out infinite alternate;
     }
@@ -103,14 +92,39 @@
       to { transform: scale(1.05); }
     }
 
-    #noText {
-      font-size: 2em;
-      margin-top: 20px;
-      color: #ffe6ec;
+    #punchEmoji {
+      font-size: 7em;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%) scale(0);
+      animation: punchAnim 0.5s forwards;
+      z-index: 10;
+    }
+
+    @keyframes punchAnim {
+      0% { transform: translate(-50%, -50%) scale(0); }
+      50% { transform: translate(-50%, -50%) scale(1.3); }
+      100% { transform: translate(-50%, -50%) scale(1); }
+    }
+
+    @media (max-width: 500px) {
+      h1 { font-size: 2em; }
+      p { font-size: 1.2em; }
+      button { font-size: 1.1em; padding: 14px 30px; }
+      .heart { font-size: 18px; }
     }
   </style>
 </head>
 <body>
+
+<!-- Sounds -->
+<audio id="loveSound">
+  <source src="https://assets.mixkit.co/sfx/preview/mixkit-romantic-tone-1276.mp3" type="audio/mpeg">
+</audio>
+<audio id="punchSound">
+  <source src="https://assets.mixkit.co/sfx/preview/mixkit-fast-punch-1690.mp3" type="audio/mpeg">
+</audio>
 
 <div class="container" id="intro">
   <h1>Happy Valentine’s Day ❤️</h1>
@@ -131,23 +145,32 @@
   <button onclick="celebrateNo()">NO 🙈</button>
 
   <div id="celebrationText" class="hidden">
-    That's great. Now, plan a romantic dinner date 💖🎆
+    That's great! Now, plan a romantic dinner date 💖
   </div>
 
-  <div id="noText" class="hidden">
-    Sorry… this option is not valid 😌❤️
+  <div id="punchEmoji" class="hidden">
+    Sorry this option is not valid 👊
   </div>
 </div>
 
 <script>
+  const loveSound = document.getElementById("loveSound");
+  const punchSound = document.getElementById("punchSound");
+
+  function playSound(sound) {
+    sound.currentTime = 0;
+    sound.play();
+  }
+
   function showProposal() {
     document.getElementById("intro").classList.add("hidden");
     document.getElementById("proposal").classList.remove("hidden");
   }
 
   function celebrateYes() {
-    document.getElementById("noText").classList.add("hidden");
+    document.getElementById("punchEmoji").classList.add("hidden");
     document.getElementById("celebrationText").classList.remove("hidden");
+    playSound(loveSound);
 
     for (let i = 0; i < 30; i++) {
       setTimeout(createFirework, i * 120);
@@ -156,7 +179,18 @@
 
   function celebrateNo() {
     document.getElementById("celebrationText").classList.add("hidden");
-    document.getElementById("noText").classList.remove("hidden");
+    const punch = document.getElementById("punchEmoji");
+    punch.classList.remove("hidden");
+    // restart animation
+    punch.style.animation = "none";
+    punch.offsetHeight; // trigger reflow
+    punch.style.animation = "punchAnim 0.5s forwards";
+    playSound(punchSound);
+
+    // small punch fireworks
+    for (let i = 0; i < 10; i++) {
+      setTimeout(createFirework, i * 150);
+    }
   }
 
   function createHeart() {
@@ -173,17 +207,4 @@
   function createFirework() {
     const firework = document.createElement("div");
     firework.className = "firework";
-    firework.style.left = Math.random() * 100 + "vw";
-    firework.style.top = Math.random() * 60 + "vh";
-    firework.style.background =
-      `hsl(${Math.random() * 360}, 100%, 70%)`;
-    document.body.appendChild(firework);
-
-    setTimeout(() => firework.remove(), 1000);
-  }
-
-  setInterval(createHeart, 300);
-</script>
-
-</body>
-</html>
+    firewo
